--- a/src/lab1/index.html
+++ b/src/lab1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab 1</title>
-    <script src="lab1.js"></script>
+    <script src="js/lab1.js"></script>
   </head>
   <body></body>
 </html>
