--- a/src/lab1/index.html
+++ b/src/lab1/index.html
@@ -6,5 +6,7 @@
     <title>Lab 1</title>
     <script src="js/lab1.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Lab 1</h1>
+  </body>
 </html>
