--- a/src/lab1/index.html
+++ b/src/lab1/index.html
@@ -13,6 +13,22 @@
     <script src="js/lab1.js"></script>
   </head>
   <body>
-    <h1>Lab 1</h1>
+    <div class="container mt-3">
+      <h1>Lab 1</h1>
+    </div>
+    <div class="border m-3 p-3 w-25">
+      <div class="container p-3 mt-3">
+        <label for="username" class="form-label">Enter Username</label>
+        <input
+          type="text"
+          class="form-control"
+          id="username"
+          placeholder="Username"
+        />
+      </div>
+      <div class="container p-3 mt-2">
+        <button type="button" class="btn btn-primary">Submit Username</button>
+      </div>
+    </div>
   </body>
 </html>
