Create function to validate username

--- a/src/lab1/index.html
+++ b/src/lab1/index.html
@@ -27,7 +27,13 @@
         />
       </div>
       <div class="container p-3 mt-2">
-        <button type="button" class="btn btn-primary">Submit Username</button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          onclick="validateUsername()"
+        >
+          Submit Username
+        </button>
       </div>
     </div>
   </body>
