--- a/src/lab2/index.html
+++ b/src/lab2/index.html
@@ -16,6 +16,12 @@
     <div class="container mt-3">
       <h1>Lab 2</h1>
     </div>
+    <div class="container mt-3">
+      <p>
+        This lab demonstrates modern JavaScript syntax. It automatically calls
+        the init() method which logs variable values to the console.
+      </p>
+    </div>
   </body>
 </html>
 
