--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -12,5 +12,26 @@
     <title>Tax Calculator</title>
     <script src="js/project1.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container mt-3">
+      <h1>Tax Calculator</h1>
+    </div>
+    <div class="container mt-3">
+      <form class="form-floating">
+        <input
+          type="number"
+          class="form-control"
+          id="salary"
+          placeholder="e.g. $50,000"
+          value="$50,000"
+          min="0"
+          max="999999999"
+        />
+        <label for="salary">Salary</label>
+        <div class="container mt-3">
+          <button type="button" class="btn btn-primary">Calculate Taxes</button>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
