--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -18,25 +18,87 @@
       <h2>Wisconsin Residents</h2>
     </div>
     <div class="container mt-3">
-      <p>
-        Enter your gross annual salary to calculate how much you owe in taxes
-        for 2024.
-      </p>
-    </div>
-    <div class="container mt-3">
-      <form class="form-floating">
-        <input
-          type="number"
-          class="form-control"
-          id="salary"
-          min="0"
-          max="999999999"
-        />
-        <label for="salary">Gross Annual Salary</label>
-        <div class="container mt-3">
-          <button type="button" class="btn btn-primary">Calculate Taxes</button>
+      <div class="row">
+        <div class="col-4">
+          <div class="container mt-3">
+            <p>
+              Enter your gross annual salary to calculate how much you owe in
+              taxes for 2024.
+            </p>
+          </div>
+          <div class="container mt-3">
+            <form class="form-floating">
+              <input
+                type="number"
+                class="form-control"
+                id="salary"
+                min="0"
+                max="999999999"
+              />
+              <label for="salary">Gross Annual Salary</label>
+              <div class="container mt-3">
+                <button type="button" class="btn btn-primary">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-calculator-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm2 .5v2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0-.5.5m0 4v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M4.5 9a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 12.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M7.5 6a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM7 9.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM10 6.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5z"
+                    />
+                  </svg>
+                  Calculate Taxes
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
-      </form>
+        <div class="col-8">
+          <div class="container mt-3">
+            <table class="table table-hover table-bordered">
+              <thead>
+                <tr>
+                  <th scope="col">Category</th>
+                  <th scope="col">Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Gross Pay</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Federal Taxes</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Wisconsin Taxes</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Social Security Taxes</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Medicare Taxes</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Total Taxes</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>Net Pay</td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
