--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -21,9 +21,9 @@
       <div class="row">
         <div class="col-4">
           <div class="container mt-3">
-            <p>
-              Enter your gross annual salary to calculate how much you owe in
-              taxes for 2024.
+            <p class="lead">
+              Enter your 2024 gross annual salary to calculate how much you owe
+              in taxes.
             </p>
           </div>
           <div class="container mt-3">
@@ -60,7 +60,7 @@
           <div class="container mt-3">
             <table class="table table-hover table-bordered">
               <thead>
-                <tr>
+                <tr class="table-secondary">
                   <th scope="col">Category</th>
                   <th scope="col">Amount</th>
                 </tr>
@@ -71,26 +71,26 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <td>Federal Taxes</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Wisconsin Taxes</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Social Security Taxes</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Medicare Taxes</td>
-                  <td></td>
-                </tr>
-                <tr>
                   <td>Total Taxes</td>
                   <td></td>
                 </tr>
-                <tr>
+                <tr class="table-light">
+                  <td class="ps-4">Federal Taxes</td>
+                  <td></td>
+                </tr>
+                <tr class="table-light">
+                  <td class="ps-4">Wisconsin Taxes</td>
+                  <td></td>
+                </tr>
+                <tr class="table-light">
+                  <td class="ps-4">Social Security Taxes</td>
+                  <td></td>
+                </tr>
+                <tr class="table-light">
+                  <td class="ps-4">Medicare Taxes</td>
+                  <td></td>
+                </tr>
+                <tr class="table-secondary">
                   <td>Net Pay</td>
                   <td></td>
                 </tr>
