populate message and table data

--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -56,6 +56,9 @@
                 </div>
               </form>
             </div>
+            <div class="container-mt-3">
+              <p class="alert alert-info" id="message"></p>
+            </div>
           </div>
         </div>
         <div class="col-8">
@@ -70,31 +73,31 @@
               <tbody>
                 <tr>
                   <td>Gross Pay</td>
-                  <td></td>
+                  <td id="grossPay"></td>
                 </tr>
                 <tr>
                   <td>Total Taxes</td>
-                  <td></td>
+                  <td id="totalTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Federal Taxes</td>
-                  <td></td>
+                  <td id="federalTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Wisconsin Taxes</td>
-                  <td></td>
-                </tr>
-                <tr class="table-light">
-                  <td class="ps-4">Social Security Taxes</td>
-                  <td></td>
+                  <td id="wisconsinTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Medicare Taxes</td>
-                  <td></td>
+                  <td id="medicareTax"></td>
+                </tr>
+                <tr class="table-light">
+                  <td class="ps-4">Social Security Taxes</td>
+                  <td id="socialSecurityTax"></td>
                 </tr>
                 <tr class="table-secondary">
                   <td>Net Pay</td>
-                  <td></td>
+                  <td id="netPay"></td>
                 </tr>
               </tbody>
             </table>
