format currency and fix alignment

--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -73,31 +73,31 @@
               <tbody>
                 <tr>
                   <td>Gross Pay</td>
-                  <td id="grossPay"></td>
+                  <td class="text-end" id="grossPay"></td>
                 </tr>
                 <tr>
                   <td>Total Taxes</td>
-                  <td id="totalTax"></td>
+                  <td class="text-end" id="totalTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Federal Taxes</td>
-                  <td id="federalTax"></td>
+                  <td class="text-end" id="federalTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Wisconsin Taxes</td>
-                  <td id="wisconsinTax"></td>
+                  <td class="text-end" id="wisconsinTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Medicare Taxes</td>
-                  <td id="medicareTax"></td>
+                  <td class="text-end" id="medicareTax"></td>
                 </tr>
                 <tr class="table-light">
                   <td class="ps-4">Social Security Taxes</td>
-                  <td id="socialSecurityTax"></td>
+                  <td class="text-end" id="socialSecurityTax"></td>
                 </tr>
                 <tr class="table-secondary">
                   <td>Net Pay</td>
-                  <td id="netPay"></td>
+                  <td class="text-end" id="netPay"></td>
                 </tr>
               </tbody>
             </table>
