--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -56,8 +56,8 @@
                 </div>
               </form>
             </div>
-            <div class="container-mt-3">
-              <p class="alert alert-info" id="message"></p>
+            <div class="container-mt-3 pt-3">
+              <p class="alert alert-danger invisible" id="message"></p>
             </div>
           </div>
         </div>
