--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -35,6 +35,7 @@
                   id="salary"
                   min="0"
                   max="999999999"
+                  pattern="^\d*$"
                 />
                 <label for="salary">Gross Annual Salary</label>
                 <div class="container mt-3">
