--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -13,63 +13,63 @@
     <script src="js/project1.js"></script>
   </head>
   <body>
-    <div class="container mt-3">
+    <div class="container my-3">
       <h1>Tax Calculator</h1>
       <h2>Wisconsin Single Filers</h2>
     </div>
-    <div class="container mt-3">
+    <div class="container my-3">
       <div class="row">
         <div class="col-4">
-          <div class="border">
-            <div class="container mt-3">
-              <p class="lead">
-                Enter your 2024 gross annual salary to calculate how much you
-                owe in taxes.
-              </p>
-            </div>
-            <div class="container mt-3">
-              <form class="form-floating">
-                <!-- Credit to Evan Weigel for RegEx -->
-                <input
-                  type="text"
-                  class="form-control"
-                  id="salary"
-                  min="0"
-                  max="999999999"
-                  pattern="^\$?((\d{1,3}(,\d{3})*)|(\d+))(\.\d{1,2})?$"
-                />
-                <label for="salary">Gross Annual Salary</label>
-                <div class="container mt-3">
-                  <button type="button" class="btn btn-primary" id="calculate">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      fill="currentColor"
-                      class="bi bi-calculator-fill"
-                      viewBox="0 0 16 16"
-                    >
-                      <path
-                        d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm2 .5v2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0-.5.5m0 4v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M4.5 9a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 12.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M7.5 6a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM7 9.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM10 6.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5z"
-                      />
-                    </svg>
-                    Calculate Taxes
-                  </button>
-                </div>
-              </form>
-            </div>
-            <div class="container-mt-3 pt-3">
-              <p class="alert alert-danger invisible" id="message"></p>
+          <div class="container my-3">
+            <div class="border">
+              <div class="container mt-3">
+                <p class="h6">
+                  Enter your 2024 gross annual salary to calculate how much you
+                  owe in taxes.
+                </p>
+                <p class="alert alert-danger d-none" id="message"></p>
+              </div>
+              <div class="container mt-3">
+                <form class="form-floating">
+                  <!-- Credit to Evan Weigel for RegEx -->
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="salary"
+                    min="0"
+                    max="999999999"
+                    pattern="^\$?((\d{1,3}(,\d{3})*)|(\d+))(\.\d{1,2})?$"
+                  />
+                  <label for="salary">Gross Annual Salary</label>
+                </form>
+              </div>
+              <div class="container my-3">
+                <button type="button" class="btn btn-primary" id="calculate">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-calculator-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2zm2 .5v2a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0-.5.5m0 4v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M4.5 9a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 12.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5M7.5 6a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM7 9.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM10 6.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5m.5 2.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5z"
+                    />
+                  </svg>
+                  Calculate Taxes
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-8">
-          <div class="container mt-3">
+          <div class="container my-3">
             <table class="table table-hover table-bordered">
               <thead>
                 <tr class="table-secondary">
-                  <th scope="col">Category</th>
-                  <th scope="col">Amount</th>
+                  <th scope="col" class="h6">Category</th>
+                  <th scope="col" class="h6">Amount</th>
                 </tr>
               </thead>
               <tbody>
@@ -98,8 +98,8 @@
                   <td class="text-end" id="socialSecurityTax"></td>
                 </tr>
                 <tr class="table-secondary">
-                  <td>Net Pay</td>
-                  <td class="text-end" id="netPay"></td>
+                  <td class="h6">Net Pay</td>
+                  <td class="text-end h6" id="netPay"></td>
                 </tr>
               </tbody>
             </table>
