--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="container my-3">
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4">
           <div class="container my-3">
             <div class="border">
               <div class="container mt-3">
@@ -63,7 +63,7 @@
             </div>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-md-8">
           <div class="container my-3">
             <table class="table table-hover table-bordered">
               <thead>
