create inline event function

--- a/src/lab4/index.html
+++ b/src/lab4/index.html
@@ -6,5 +6,19 @@
     <title>Lab 4</title>
     <script src="js/lab4.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Lab 4 - JS Events</h1>
+    <h2>inline</h2>
+    <button type="button" onclick="inline(this);">red</button>
+    <button type="button" onclick="inline(this);">green</button>
+    <button type="button" onclick="inline(this);">blue</button>
+    <h2>dotNotation</h2>
+    <button type="button">average</button>
+    <button type="button">good</button>
+    <button type="button">excellent</button>
+    <h2>addEventListener</h2>
+    <button type="button">tall</button>
+    <button type="button">average</button>
+    <button type="button">short</button>
+  </body>
 </html>
