create dotNoation and addEventListener functions

--- a/src/lab4/index.html
+++ b/src/lab4/index.html
@@ -13,12 +13,12 @@
     <button type="button" onclick="inline(this);">green</button>
     <button type="button" onclick="inline(this);">blue</button>
     <h2>dotNotation</h2>
-    <button type="button">average</button>
-    <button type="button">good</button>
-    <button type="button">excellent</button>
+    <button type="button" class="dotNotation">average</button>
+    <button type="button" class="dotNotation">good</button>
+    <button type="button" class="dotNotation">excellent</button>
     <h2>addEventListener</h2>
-    <button type="button">tall</button>
-    <button type="button">average</button>
-    <button type="button">short</button>
+    <button type="button" class="addEventListener">tall</button>
+    <button type="button" class="addEventListener">average</button>
+    <button type="button" class="addEventListener">short</button>
   </body>
 </html>
