document html elements

--- a/src/project1/index.html
+++ b/src/project1/index.html
@@ -17,6 +17,8 @@
       <h1>Tax Calculator</h1>
       <h2>Wisconsin Single Filers</h2>
     </div>
+
+    <!-- Salary Input Form -->
     <div class="container my-3">
       <div class="row">
         <div class="col-md-4">
@@ -63,6 +65,9 @@
             </div>
           </div>
         </div>
+        <!-- END Salary Input Form -->
+
+        <!-- Results Table -->
         <div class="col-md-8">
           <div class="container my-3">
             <table class="table table-hover table-bordered">
@@ -105,6 +110,7 @@
             </table>
           </div>
         </div>
+        <!-- END Results Table -->
       </div>
     </div>
   </body>
