populate table data

--- a/src/project2/index.html
+++ b/src/project2/index.html
@@ -12,5 +12,17 @@
       <input type="text" id="zip" />
       <button type="button" id="getWeather">Get Weather</button>
     </form>
+    <table>
+      <tr>
+        <th>City</th>
+        <th>Temperature</th>
+        <th>Wind Speed</th>
+      </tr>
+      <tr>
+        <td id="city"></td>
+        <td id="temperatureFahrenheit"></td>
+        <td id="windSpeed"></td>
+      </tr>
+    </table>
   </body>
 </html>
