--- a/src/project2/index.html
+++ b/src/project2/index.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2 Quick Start</title>
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <!-- JavaScript -->
     <script src="js/project2.js" charset="UTF-8"></script>
   </head>
   <body>
+    <!-- Zip Code Entry Form -->
     <form method="GET">
       <label for="zip">Zip Code:</label>
       <input type="text" id="zip" />
       <button type="button" id="getWeather">Get Weather</button>
     </form>
-    <table>
+    <!-- END Zip Code Entry Form -->
+
+    <!-- Weather Data Results Table -->
+    <table class="visually-hidden" id="weatherResults">
       <tr>
         <th>City</th>
         <th>Temperature</th>
@@ -24,5 +46,6 @@
         <td id="windSpeed"></td>
       </tr>
     </table>
+    <!-- END Weather Data Results Table -->
   </body>
 </html>
