--- a/src/project2/index.html
+++ b/src/project2/index.html
@@ -54,16 +54,15 @@
         >
           <thead>
             <tr scope="row">
-              <th scope="col" colspan="2" class="text-center text-bg-dark">
-                Current Weather
-              </th>
+              <th
+                scope="col"
+                colspan="2"
+                class="text-center text-bg-dark"
+                id="weatherHeading"
+              ></th>
             </tr>
           </thead>
           <tbody>
-            <tr scope="row">
-              <th scope="col">City</th>
-              <td scope="col" id="city"></td>
-            </tr>
             <tr scope="row">
               <th scope="col">Temperature</th>
               <td scope="col" id="temperatureFahrenheit"></td>
