--- a/src/project2/index.html
+++ b/src/project2/index.html
@@ -25,6 +25,16 @@
     <script src="js/project2.js" charset="UTF-8"></script>
   </head>
   <body>
+    <div class="container pt-5">
+      <div class="col-md-6 offset-md-3">
+        <h1 class="text-center">Current Weather Application</h1>
+        <p class="text-center">
+          Enter a US zip code to get the current weather from that area.
+        </p>
+        <hr />
+      </div>
+    </div>
+
     <!-- Zip Code Entry Form -->
     <div class="container pt-5">
       <div class="col-md-4 offset-md-4">
