add html elements

--- a/src/project3/index.html
+++ b/src/project3/index.html
@@ -6,5 +6,9 @@
     <title>Project 3</title>
     <script src="js/project3.js" charset="UTF-8"></script>
   </head>
-  <body></body>
+  <body>
+    <label for="task">Add New Task</label>
+    <input type="text" id="task" />
+    <button type="button" id="addTask">Add Task</button>
+  </body>
 </html>
