test add task button

--- a/src/project3/index.html
+++ b/src/project3/index.html
@@ -9,6 +9,6 @@
   <body>
     <label for="task">Add New Task</label>
     <input type="text" id="task" />
-    <button type="button" id="addTask">Add Task</button>
+    <button type="button" id="newTask">Add Task</button>
   </body>
 </html>
