update error handling

--- a/src/project3/index.html
+++ b/src/project3/index.html
@@ -31,7 +31,7 @@
     <h1>Project 3</h1>
     <h2>Add Tasks</h2>
     <label for="task">Add New Task</label>
-    <input type="text" id="task" />
+    <input type="text" id="task" required />
     <button type="button" id="newTask">Add Task</button>
     <h2>Current Tasks</h2>
     <ol id="taskList"></ol>
